add config db and table databse

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
-<h1>Sukses</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-6">Selamat Datang Di Todo List</div>
+        <div class="col-6"></div>
+    </div>
+</div>
