--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,47 @@
-<div class="container">
-    <div class="row">
-        <div class="col-6">Selamat Datang Di Todo List</div>
-        <div class="col-6"></div>
+<main>
+    <div class="container">
+        <div class="title">
+            <h3>Welcome Back</h3>
+            <p class="">You've got task become in this week</p>
+        </div>
+        <div class="content">
+            <div class="wrapper">
+                <div class="wrapper_column_1">
+                    <input type="checkbox" name="" id="">
+                </div>
+                <div class="wrapper_column_2">
+                    <h6 class="fw-bold">Design and Coding</h6>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, inventore?</p>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+</main>
+
+
+<style>
+    .container {
+        padding: 5em;
+    }
+
+    h3 {
+        color: black;
+        font-weight: bold;
+    }
+
+    .wrapper {
+        background-color: white;
+        padding: 2em;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+    }
+
+    .wrapper_column_1 {
+        padding: 1em;
+    }
+
+    .wrapper_column_2 {
+        padding: 1em;
+    }
+</style>
